# RAG-Pipeline

./: .env.example  .gitignore  API_USAGE.md  Dockerfile  README.md  api.py  app.py  app_api.py  example_client.py  launch.sh  pyproject.toml  requirements.txt
data/vector_store/: chroma.sqlite3
notebook/: document.ipynb  pdf_loader.ipynb  pdf_loader2.ipynb
src/: rag_pipeline.py
string/: chroma.sqlite3
